(Bug 36231) Fixed the issue of table headers getting left aligned on enabling "Justify Paragraphs"
Result: The table header cell is centered and the table body cells are right aligned.

--- a/skins/common/commonElements.css
+++ b/skins/common/commonElements.css
@@ -207,6 +207,9 @@ pre, .mw-code {
 table {
 	font-size: 100%;
 }
+th {
+	text-align: center;
+}
 
 /* Forms */
 fieldset {
